tests/ui/struct-expressions/struct-expression-struct.stderr
error[E0784]: union expressions should have exactly one field
  --> $DIR/struct-expression-struct.rs:16:34
   |
LL |     let mut new_union = unsafe { MyUnion { ..base_named_union } }; 
   |                                  ^^^^^^^

error[E0436]: functional record update syntax requires a struct
  --> $DIR/struct-expression-struct.rs:16:46
   |
LL |     let mut new_union = unsafe { MyUnion { ..base_named_union } }; 
   |                                              ^^^^^^^^^^^^^^^^

error[E0784]: union expressions should have exactly one field
  --> $DIR/struct-expression-struct.rs:20:34
   |
LL |     let named_union_two_fields = MyUnion { x: 5, y: 1.2 };
   |                                  ^^^^^^^

error[E0784]: union expressions should have exactly one field
  --> $DIR/struct-expression-struct.rs:24:38
   |
LL |     let shorthand_union_two_fields = MyUnion { x, y };
   |                                      ^^^^^^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0436, E0784.
For more information about an error, try `rustc --explain E0436`.
